project register and sessions route created

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DB_CONNECTION_STRING=mongodb://localhost:27017/mydatabase
+DB_CONNECTION_STRING=mongodb+srv://manish:manish123456@cluster0.6zoez77.mongodb.net/
